# zero2prod

./: Cargo.toml  Taskfile.yml  configuration.yaml
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20251103194158_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  error.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
